// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GameFinished should match snapshot when circle wins 1`] = `
<div
  className="restartAlignment visible"
>
  <Function
    className="winnerText"
    use="headline4"
  >
    <Icon
      className="winnerIcon"
      icon={
        Object {
          "icon": <MdPanoramaFishEye />,
          "size": "large",
        }
      }
    />
     
    wins!
  </Function>
  <withRipple(Function)
    dense={true}
    onClick={[Function]}
    raised={true}
  >
    Play Again
  </withRipple(Function)>
</div>
`;

exports[`GameFinished should match snapshot when cross wins 1`] = `
<div
  className="restartAlignment visible"
>
  <Function
    className="winnerText"
    use="headline4"
  >
    <Icon
      className="winnerIcon"
      icon={
        Object {
          "icon": <MdClear />,
          "size": "large",
        }
      }
    />
     
    wins!
  </Function>
  <withRipple(Function)
    dense={true}
    onClick={[Function]}
    raised={true}
  >
    Play Again
  </withRipple(Function)>
</div>
`;

exports[`GameFinished should match snapshot when draw 1`] = `
<div
  className="restartAlignment visible"
>
  <Function
    className="winnerText"
    use="headline4"
  >
    It's a draw!
  </Function>
  <withRipple(Function)
    dense={true}
    onClick={[Function]}
    raised={true}
  >
    Play Again
  </withRipple(Function)>
</div>
`;

exports[`GameFinished should match snapshot when no one wins 1`] = `
<div
  className="restartAlignment hidden"
>
  <Function
    className="winnerText"
    use="headline4"
  >
    <Icon
      className="winnerIcon"
      icon={
        Object {
          "icon": <MdClear />,
          "size": "large",
        }
      }
    />
    resrv
  </Function>
  <withRipple(Function)
    dense={true}
    onClick={[Function]}
    raised={true}
  >
    Play Again
  </withRipple(Function)>
</div>
`;
